--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -7,8 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NZWalksConnectionString": "Server=localhost\\MSSQLSERVER06;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "NZWalksConnectionString": "Server=localhost\\MSSQLSERVER06;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "NZWalksAuthConnectionString": "Server=localhost\\MSSQLSERVER06 ;Database=NZWalksAuthDb; Trusted_Connection=True;TrustServerCertificate=True"
+    
 
+  },
+  "Jwt": {
+    "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SY77uhSYSko098HHhgst",
+    "Issuer": "https://localhost:7269",
+    "Audience": "https://localhost:7269"
   }
 
 }
